versioned_docs/version-3.0/sql-manual/sql-functions/scalar-functions/date-time-functions/weeks-sub.md
---
{
  "title": "WEEKS_SUB",
  "language": "en"
}
---

<!-- 
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->


## Description
Subtracts a specified number of weeks from a specified date or time value (i.e., subtracts weeks * 7 days).

## Syntax
```sql
WEEKS_SUB(<date_value>, <week_period>)
```

## Required parameters
## 必选参数
| Parameter       | Description                                                                                         |
|-----------------|-----------------------------------------------------------------------------------------------------|
| `date_value`    | `DATE` or `DATETIME` type input value.                                                              |
| `week_period`   | Integer, representing the number of weeks to subtract (positive to decrease, negative to increase). |


## Example

1. Subtract one week from the datetime `2020-02-02 02:02:02`
    ```sql
    select weeks_sub("2020-02-02 02:02:02", 1);
    ```
    ```text
    +-------------------------------------+
    | weeks_sub('2020-02-02 02:02:02', 1) |
    +-------------------------------------+
    | 2020-01-26 02:02:02                 |
    +-------------------------------------+
    ```

2. Subtract one week from the date `2020-02-02`
    ```sql
    select weeks_sub("2020-02-02", 1);
    ```
    ```text
    +--------------------------------------------+
    | weeks_sub(cast('2020-02-02' as DATEV2), 1) |
    +--------------------------------------------+
    | 2020-01-26                                 |
    +--------------------------------------------+
    ```